initial js and css for final

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ header{
 	line-height: 60px;
 	height: 60px;
 	xpadding: 0 20px;
-	background-color: red;
+	background-color: white;
 	xbox-shadow: 0 0 0 0 white, 0 6px 4px black;
 	xz-index: 10;
 	text-align: center;
