--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,18 @@ html{
 	background-size: cover;
 }
 #wrap {
-	min-width: 800px;	
+	min-width: 1000px;	
 }
 header{
 	height: 50px;
 	width: 100%;
-	min-width: 800px;
+	xmin-width: 900px;
 	padding: 0 20px;
 	padding-right: 20px;
 	background-color: gainsboro;
 	border-bottom: thin solid black;
 	position: fixed;
-	z-index: 2;
+	z-index: 20;
 	box-shadow: 0 0 5px black;
 	xvisibility: hidden;
 }
@@ -37,12 +37,31 @@ header{
 }
 #topnav{
 	float: right;
+	text-align: left;
 	line-height: 50px;
 	margin-right: 40px;
 	font-weight: bold;
 	font-size: large;
 	text-transform: uppercase;
 }
+#topnav ul{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+#topnav li{
+	float: left;
+}
+#topnav a{
+	display: block;
+	padding-left: 10px;
+	text-decoration: none;
+	color: #000;
+}
+.tinynav{
+	display: none;
+}
+/** Container contains the narrower bits **/
 #container{
 	float: left;
 	width: 60%;
@@ -53,21 +72,29 @@ header{
 	xbackground-color: gray;
 	position: relative;
 }
+/** Container is wrapped to eventually transition different border **/
 #container-wrapper{
 	position: absolute;
 	width: 100%;
 	xpadding: 5px;
 }
+/** For now Border is one sided shadow **/
+.shadow-right{
+	-webkit-box-shadow: 5px 5px 5px  black;
+	-moz-box-shadow: 5px -5px 5px  black;
+    box-shadow: 5px -5px 5px  black;
+}
+/** Ideally border will be done with before and after **/
 #container-wrapper::before, #container-wrapper::after{
 	height: 100%;
 	width: 100%;
 	position: absolute;
 	top: 10px;
 	left: 10px;
-	background: red;
+	background: black;
 }
 #pagehead{
-	
+	xoverflow: hidden;
 }
 #breadcrumbs{
 	font-size: small;
@@ -75,7 +102,8 @@ header{
 	xtop: 51px;
 	xwidth: 60%;
 	padding: 0 20px;
-	background-color: yellow;
+	background-color: lightgray;
+	opacity: 0.6;
 	xposition: fixed;	
 }
 #pagetitle{
@@ -85,34 +113,45 @@ header{
 	height: 60px;
 	xpadding: 0 20px;
 	background-color: white;
-	xbox-shadow: 0 0 0 0 white, 0 6px 4px black;
-	xz-index: 10;
+	opacity: 0.8;
+	z-index: 10;
 	text-align: center;
+	border-bottom: thin solid black;
+
 }
+/** Keeps page titles visable when scrolling**/
 .floatingHeader {
 
   position: fixed;
   width: 100%;
-  min-width: 600px;
+  xmin-width: 600px;
   top: 51px;
+  xleft: 30%;
   xmargin-right: 40%;
   visibility: hidden;
+  opacity: 1;
   xpadding-left: 0;
   xpadding-right: 0;
 }
+/** would be located under page title if needed **/
 #subnav{
 	
 }
 #content{
 	min-height: 400px;
-	background-color: blue;
+	background-color: white;
+	opacity: 0.85;
 	a[href$=".pdf"]:after {content: " (PDF)";};	
 	a[href$=".pdf"]:after {content: " (PDF, "attr(data-size)")";};
 }
 footer{
 	height: 120px;
-	background-color: gray;
+	background-color: lightgray;
+	opacity: 0.8;
 }
+/** SOCIAL MEDIA LINKS BAR **/
+/** Lots of extra unused CSS becuase still work in progress **/
+/** I am creating apropriate themed icons to fly in on hover **/
 #socialbar{
 	background-color: orange;
 	height: 30px;
@@ -131,6 +170,21 @@ footer{
 	width: 100%;
 	display: inline-block;
 }
+.socialbar-box {
+    color: black;
+    -webkit-transition:all 0.2s ease;
+    -moz-transition:all 0.2s ease;
+    background-position:320px 50%;
+    background-repeat:no-repeat;
+    text-decoration: none;
+}
+.socialbar-box:hover {
+	color: black;
+	font-weight: bold;
+	background-position:200px 50%;
+}
+/** Lower Footer is Footer area bellow Social links **/
+/** [ [address] [footlogo] [footnav] ]**/
 #lowerfoot{
 	text-align: justify;
 }
