--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@ body {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 300;	
 	margin: 0 0 0 0;
-}
-html{
 	background: url("../media/background-texture.jpg") no-repeat center center fixed;
 	-webkit-background-size:cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+}
+html{
+	
 }
 #wrap {
 	min-width: 1000px;	
@@ -34,7 +35,7 @@ header{
 	line-height: 50px;
 	font-size: xx-large;
 	font-weight: bold;
-}
+} 
 #topnav{
 	float: right;
 	text-align: left;
@@ -43,6 +44,12 @@ header{
 	font-weight: bold;
 	font-size: large;
 	text-transform: uppercase;
+}
+#topnav select{
+	display: none;
+}
+#topnavlist{
+	display: inline-block;
 }
 #topnav ul{
 	list-style: none;
@@ -55,11 +62,21 @@ header{
 #topnav a{
 	display: block;
 	padding-left: 10px;
+	padding-right: 10px;
 	text-decoration: none;
 	color: #000;
 }
+@media (max-width: 800px) {
+  #topnav ul   { display: none; }
+  #topnav select { display: inline-block; }
+} 
 .tinynav{
 	display: none;
+}
+.active {
+	color: white;
+	background: darkgray;
+	xtext-decoration: underline;
 }
 /** Container contains the narrower bits **/
 #container{
@@ -94,7 +111,7 @@ header{
 	background: black;
 }
 #pagehead{
-	xoverflow: hidden;
+	overflow: hidden;
 }
 #breadcrumbs{
 	font-size: small;
@@ -103,7 +120,7 @@ header{
 	xwidth: 60%;
 	padding: 0 20px;
 	background-color: lightgray;
-	opacity: 0.6;
+	opacity: 0.7;
 	xposition: fixed;	
 }
 #pagetitle{
@@ -113,7 +130,7 @@ header{
 	height: 60px;
 	xpadding: 0 20px;
 	background-color: white;
-	opacity: 0.8;
+	opacity: 0.9;
 	z-index: 10;
 	text-align: center;
 	border-bottom: thin solid black;
@@ -137,13 +154,53 @@ header{
 #subnav{
 	
 }
+.persist-sub-header {
+	font-size: large;
+	font-weight: bold;
+	xline-height: 60px;
+	xpadding: 0;	
+	xheight: 40px;
+	padding: 5px 5px;
+	background-color: white;
+	opacity: 1;
+	z-index: 10;
+	text-align: left;
+	xtext-decoration: underline;
+	xborder-bottom: thin solid black;	
+}
+.floatingSubHeader {
+  position: fixed;
+  width: 100%;
+  xmin-width: 600px;
+  top: 112px;
+  xleft: 30%;
+  xmargin-right: 40%;
+  visibility: hidden;
+  opacity: 1;
+  xpadding-left: 0;
+  xpadding-right: 0;
+}
 #content{
+	xpadding: 10px 20px;
 	min-height: 400px;
 	background-color: white;
-	opacity: 0.85;
-	a[href$=".pdf"]:after {content: " (PDF)";};	
-	a[href$=".pdf"]:after {content: " (PDF, "attr(data-size)")";};
+	opacity: 0.9;
 }
+#content h1, h2, h3, h4, h5, h6{
+	margin-top: 0;
+	padding: 5px 5px
+}
+#content ol, ul{
+	padding: 5px 35px;
+}
+#content a[href$=".pdf"]:after {content: " (PDF)";}
+#content a[href$=".pdf"]:after {content: " (PDF, "attr(data-size)")";}
+
+#content p{ 
+		margin: 0;
+		padding: 5px 10px 5px 10px;
+	}
+
 footer{
 	height: 120px;
 	background-color: lightgray;
@@ -187,9 +244,10 @@ footer{
 /** [ [address] [footlogo] [footnav] ]**/
 #lowerfoot{
 	text-align: justify;
+	height: 90px;
 }
 #lowerfoot div{
-	width: 20%;
+	width: 170px;
 	display: inline-block;
 }
 #lowerfoot:after{
@@ -205,8 +263,8 @@ footer{
 #footlogo{
 	text-align: center;
 	padding: 5px;
-	font-size: 60px;
-	line-height: 30px;
+	font-size: 80px;
+	xline-height: 60px;
 }
 #footnav{
 	text-align: right;
