--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 }
+body a{
+	color: black;
+}
 html{
 	
 }
@@ -18,7 +21,7 @@ header{
 	height: 50px;
 	width: 100%;
 	xmin-width: 900px;
-	padding: 0 20px;
+	xpadding: 0 20px;
 	padding-right: 20px;
 	background-color: gainsboro;
 	border-bottom: thin solid black;
@@ -31,11 +34,15 @@ header{
 	
 }
 #sitename {
+	padding: 0 10px;
 	float: left;
 	line-height: 50px;
 	font-size: xx-large;
 	font-weight: bold;
-} 
+}
+#sitename:hover{
+	text-decoration: underline;
+}
 #topnav{
 	float: right;
 	text-align: left;
@@ -59,6 +66,10 @@ header{
 #topnav li{
 	float: left;
 }
+#topnav li:hover, li:active{
+	background: darkgray;
+	text-decoration: underline;
+}
 #topnav a{
 	display: block;
 	padding-left: 10px;
@@ -70,24 +81,26 @@ header{
   #topnav ul   { display: none; }
   #topnav select { display: inline-block; }
 } 
+
 .tinynav{
 	display: none;
 }
 .active {
-	color: white;
+	xcolor: white;
 	background: darkgray;
 	xtext-decoration: underline;
 }
 /** Container contains the narrower bits **/
 #container{
 	float: left;
-	width: 60%;
+	width: 70%;
 	min-width: 600px;
-	margin-left: 30%;
+	margin-left: 20%;
 	margin-right: 10%;
 	top: 51px;
 	xbackground-color: gray;
 	position: relative;
+
 }
 /** Container is wrapped to eventually transition different border **/
 #container-wrapper{
@@ -122,6 +135,12 @@ header{
 	background-color: lightgray;
 	opacity: 0.7;
 	xposition: fixed;	
+}
+#breadcrumbs a{
+	text-decoration: none;
+}
+#breadcrumbs a:hover,a:active{
+	text-decoration: underline;
 }
 #pagetitle{
 	font-size: x-large;
@@ -216,6 +235,9 @@ footer{
 	text-align: justify;
 	line-height: 30px;
 }
+#socialbar a{
+	text-decoration: none;
+}
 #socialbar div{
 	width: 70px;
 	height: 30px;
@@ -259,11 +281,12 @@ footer{
 	text-align: left;
 	font-size: small;
 	padding: 5px;
+	height: 78px;
 }
 #footlogo{
 	text-align: center;
 	padding: 5px;
-	font-size: 80px;
+	font-size: 5em;
 	xline-height: 60px;
 }
 #footnav{
