--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,15 @@ header{
 	margin: 0;
 	padding: 5px 10px 5px 10px;
 }
+#content img{  
+    border:2px groove black;  
+    border-radius: 10px;
+    padding: 4px 4px 4px 4px;
+    margin: 1px 1px 1px 1px;  
+    border:1px solid black;
+	background: gainsboro;
+    opacity: 1;
+} 
 #content table{
 	text-align: left;
 }
